# marianneai

./: .dockerignore  .gitignore  .replit  README.md  compose.yml
services/email-interface/: Cargo.toml  README.md
services/email-interface/output/email-triage/: final_report_20260314_133701.json  final_report_20260314_134112.json  final_report_20260314_134207.json  final_report_20260314_134353.json  final_report_20260314_134857.json  final_report_20260314_134901.json  final_report_20260314_141235.json  final_report_20260314_141912.json  final_report_20260314_142252.json  final_report_20260314_142332.json  final_report_20260314_144042.json  final_report_20260314_144155.json  final_report_20260314_145003.json  final_report_20260314_145052.json  final_report_20260314_145614.json  final_report_20260314_145651.json  final_report_20260314_145955.json  final_report_20260314_150034.json  final_report_20260314_150221.json  final_report_20260314_150332.json  final_report_20260314_150421.json  final_report_20260314_150558.json  final_report_20260314_150703.json  final_report_20260314_150747.json  final_report_20260314_151621.json  step_0001_context.json  step_0002_context.json  step_0003_context.json  step_0004_context.json  step_0005_context.json  step_0006_context.json  step_0007_context.json  step_0008_context.json  step_0009_context.json  step_0010_context.json  (+55 more)
services/email-interface/scripts/: run_datagouv_mcp_local.sh  run_demo_examples.sh  run_email_interface_loop.sh
services/email-interface/src/: agentic.rs  compat.rs  gmail.rs  lib.rs  main.rs  queue.rs  types.rs
(+103 files in other folders)
